--- a/src/app/components/product/product.component.scss
+++ b/src/app/components/product/product.component.scss
@@ -34,18 +34,14 @@
 
     span {
       font-family: Avenir, serif;
-      font-style: normal;
       font-weight: 900;
       font-size: 35px;
-      line-height: 30px;
-
       color: #888CA9;
     }
   }
 
   .product-image {
     width: 130px;
-
     padding: 10px;
     box-sizing: border-box;
 
@@ -61,19 +57,14 @@
     box-sizing: border-box;
     transition: all .15s linear;
 
-    display: flex;
     justify-content: space-between;
 
     .product-description {
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
-      box-sizing: border-box;
 
       .description-header {
         display: flex;
-        flex-direction: row;
-        align-items: center;
         box-sizing: border-box;
         margin-bottom: 15px;
         padding-top: 15px;
@@ -86,16 +77,12 @@
             line-height: 25px;
             letter-spacing: 0.02em;
 
-            display: flex;
-            align-items: center;
-            padding-top: 1px;
-
             color: #3F4457;
           }
         }
 
         .header-icons {
-          margin-left: 10px;
+          margin-left: 11px;
           padding-top: 1px;
           display: flex;
           justify-content: space-between;
@@ -178,7 +165,6 @@
     .product-actions {
       p {
         font-family: Avenir, serif;
-        font-style: normal;
         font-weight: 900;
         font-size: 25px;
         line-height: 36px;
@@ -198,7 +184,18 @@
           margin: 10px;
           color: #D3D6DC;
           font-weight: 700;
+        }
+
+        .icon-eye {
+          font-size: 30px;
+        }
+
+        .icon-heart {
           font-size: 25px;
+        }
+
+        .icon-add {
+          font-size: 19px;
         }
       }
     }
